# tlog

./: CMakeLists.txt  README.md
examples/: BasicBenchmarkTestIInChar.cpp  BasicBenchmarkTestInWchar.cpp  BasicLogInCharToConsole.cpp  BasicLogInCharToFile.cpp  BasicLogInWcharToConsole.cpp  BasicLogInWcharToFile.cpp  BasicMultiLanguageTestInWchar.cpp  BasicThreadSafetyTest.cpp  BasıcLogInWcharToConsole.cpp  LogMacroToConsoleChar.cpp  LogMacroToFileInChar.cpp  MacroToConsoleInStringView.cpp  MacroToConsoleInWStringView.cpp  MacroToConsoleInWchar.cpp  MacroToFileInStringView.cpp  MacroToFileInWStringView.cpp  MacroToFileInWchar.cpp  tlogger.cpp
test/: formatterTest.cpp  loggerTest.cpp
tlogger/: Formatter.h  Logger.h  formatter.h  formatter.hpp  logger.h  logger.hpp  tlogger.cpp
